lab05/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     empty -> <empty>
Rule 3     instructions_opt -> instructions
Rule 4     instructions_opt -> empty
Rule 5     instructions -> instructions instruction
Rule 6     instructions -> instruction
Rule 7     instruction -> assignment
Rule 8     instruction -> conditional_statement
Rule 9     instruction -> print_statement
Rule 10    instruction -> jump_statement
Rule 11    instruction -> return_statement
Rule 12    instruction -> while_loop
Rule 13    instruction -> for_loop
Rule 14    instruction -> instruction_block
Rule 15    instruction_block -> { instructions }
Rule 16    assignment -> assign_id = expression ;
Rule 17    assignment -> assign_id MUL_ASSIGN expression ;
Rule 18    assignment -> assign_id DIV_ASSIGN expression ;
Rule 19    assignment -> assign_id PLUS_ASSIGN expression ;
Rule 20    assignment -> assign_id SUB_ASSIGN expression ;
Rule 21    assign_id -> ID
Rule 22    assign_id -> slice
Rule 23    slice -> ID slice_vector
Rule 24    slice_vector -> [ expression_list ]
Rule 25    slice_vector -> [ range ]
Rule 26    slice_vector -> [ range , range ]
Rule 27    expression -> expression_binop
Rule 28    expression -> expression_relop
Rule 29    expression -> expression_unary
Rule 30    expression -> matrix_funcs
Rule 31    expression -> constant
Rule 32    expression -> matrix
Rule 33    expression -> vector
Rule 34    expression -> slice
Rule 35    expression -> ID
Rule 36    expression -> ( expression )
Rule 37    expression_binop -> expression + expression
Rule 38    expression_binop -> expression - expression
Rule 39    expression_binop -> expression * expression
Rule 40    expression_binop -> expression / expression
Rule 41    expression_binop -> expression MATRIX_PLUS expression
Rule 42    expression_binop -> expression MATRIX_SUB expression
Rule 43    expression_binop -> expression MATRIX_MUL expression
Rule 44    expression_binop -> expression MATRIX_DIV expression
Rule 45    expression_relop -> expression RELOP_EQ expression
Rule 46    expression_relop -> expression RELOP_GT expression
Rule 47    expression_relop -> expression RELOP_LT expression
Rule 48    expression_relop -> expression RELOP_GE expression
Rule 49    expression_relop -> expression RELOP_LE expression
Rule 50    expression_relop -> expression RELOP_NE expression
Rule 51    expression_unary -> - expression
Rule 52    expression_unary -> expression '
Rule 53    matrix_funcs -> ZEROS ( expression_list )
Rule 54    matrix_funcs -> ONES ( expression_list )
Rule 55    matrix_funcs -> EYE ( expression_list )
Rule 56    constant -> number
Rule 57    constant -> DT_STRING
Rule 58    matrix -> [ vectors ]
Rule 59    vectors -> vector
Rule 60    vectors -> vectors , vector
Rule 61    vector -> [ numbers ]
Rule 62    vector -> [ ]
Rule 63    numbers -> numbers , number
Rule 64    numbers -> number
Rule 65    number -> DT_INTEGER
Rule 66    number -> DT_FLOAT
Rule 67    conditional_statement -> IF ( expression ) instruction
Rule 68    conditional_statement -> IF ( expression ) instruction ELSE instruction
Rule 69    jump_statement -> BREAK ;
Rule 70    jump_statement -> CONTINUE ;
Rule 71    return_statement -> RETURN ;
Rule 72    return_statement -> RETURN expression ;
Rule 73    print_statement -> PRINT expression_list ;
Rule 74    expression_list -> expression_list , expression
Rule 75    expression_list -> expression
Rule 76    while_loop -> WHILE ( expression ) instruction
Rule 77    for_loop -> FOR ID = range instruction
Rule 78    range -> expression : expression

Terminals, with rules where they appear

'                    : 52
(                    : 36 53 54 55 67 68 76
)                    : 36 53 54 55 67 68 76
*                    : 39
+                    : 37
,                    : 26 60 63 74
-                    : 38 51
/                    : 40
:                    : 78
;                    : 16 17 18 19 20 69 70 71 72 73
=                    : 16 77
BREAK                : 69
CONTINUE             : 70
DIV_ASSIGN           : 18
DT_FLOAT             : 66
DT_INTEGER           : 65
DT_STRING            : 57
ELSE                 : 68
EYE                  : 55
FOR                  : 77
ID                   : 21 23 35 77
IF                   : 67 68
MATRIX_DIV           : 44
MATRIX_MUL           : 43
MATRIX_PLUS          : 41
MATRIX_SUB           : 42
MUL_ASSIGN           : 17
ONES                 : 54
PLUS_ASSIGN          : 19
PRINT                : 73
RELOP_EQ             : 45
RELOP_GE             : 48
RELOP_GT             : 46
RELOP_LE             : 49
RELOP_LT             : 47
RELOP_NE             : 50
RETURN               : 71 72
SUB_ASSIGN           : 20
WHILE                : 76
ZEROS                : 53
[                    : 24 25 26 58 61 62
]                    : 24 25 26 58 61 62
error                : 
{                    : 15
}                    : 15

Nonterminals, with rules where they appear

assign_id            : 16 17 18 19 20
assignment           : 7
conditional_statement : 8
constant             : 31
empty                : 4
expression           : 16 17 18 19 20 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 52 67 68 72 74 75 76 78 78
expression_binop     : 27
expression_list      : 24 53 54 55 73 74
expression_relop     : 28
expression_unary     : 29
for_loop             : 13
instruction          : 5 6 67 68 68 76 77
instruction_block    : 14
instructions         : 3 5 15
instructions_opt     : 1
jump_statement       : 10
matrix               : 32
matrix_funcs         : 30
number               : 56 63 64
numbers              : 61 63
print_statement      : 9
program              : 0
range                : 25 26 26 77
return_statement     : 11
slice                : 22 34
slice_vector         : 23
vector               : 33 59 60
vectors              : 58 60
while_loop           : 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (3) instructions_opt -> . instructions
    (4) instructions_opt -> . empty
    (5) instructions -> . instructions instruction
    (6) instructions -> . instruction
    (2) empty -> .
    (7) instruction -> . assignment
    (8) instruction -> . conditional_statement
    (9) instruction -> . print_statement
    (10) instruction -> . jump_statement
    (11) instruction -> . return_statement
    (12) instruction -> . while_loop
    (13) instruction -> . for_loop
    (14) instruction -> . instruction_block
    (16) assignment -> . assign_id = expression ;
    (17) assignment -> . assign_id MUL_ASSIGN expression ;
    (18) assignment -> . assign_id DIV_ASSIGN expression ;
    (19) assignment -> . assign_id PLUS_ASSIGN expression ;
    (20) assignment -> . assign_id SUB_ASSIGN expression ;
    (67) conditional_statement -> . IF ( expression ) instruction
    (68) conditional_statement -> . IF ( expression ) instruction ELSE instruction
    (73) print_statement -> . PRINT expression_list ;
    (69) jump_statement -> . BREAK ;
    (70) jump_statement -> . CONTINUE ;
    (71) return_statement -> . RETURN ;
    (72) return_statement -> . RETURN expression ;
    (76) while_loop -> . WHILE ( expression ) instruction
    (77) for_loop -> . FOR ID = range instruction
    (15) instruction_block -> . { instructions }
    (21) assign_id -> . ID
    (22) assign_id -> . slice
    (23) slice -> . ID slice_vector

    $end            reduce using rule 2 (empty -> .)
    IF              shift and go to state 15
    PRINT           shift and go to state 16
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    WHILE           shift and go to state 20
    FOR             shift and go to state 21
    {               shift and go to state 23
    ID              shift and go to state 22

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    empty                          shift and go to state 4
    instruction                    shift and go to state 5
    assignment                     shift and go to state 6
    conditional_statement          shift and go to state 7
    print_statement                shift and go to state 8
    jump_statement                 shift and go to state 9
    return_statement               shift and go to state 10
    while_loop                     shift and go to state 11
    for_loop                       shift and go to state 12
    instruction_block              shift and go to state 13
    assign_id                      shift and go to state 14
    slice                          shift and go to state 24

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (3) instructions_opt -> instructions .
    (5) instructions -> instructions . instruction
    (7) instruction -> . assignment
    (8) instruction -> . conditional_statement
    (9) instruction -> . print_statement
    (10) instruction -> . jump_statement
    (11) instruction -> . return_statement
    (12) instruction -> . while_loop
    (13) instruction -> . for_loop
    (14) instruction -> . instruction_block
    (16) assignment -> . assign_id = expression ;
    (17) assignment -> . assign_id MUL_ASSIGN expression ;
    (18) assignment -> . assign_id DIV_ASSIGN expression ;
    (19) assignment -> . assign_id PLUS_ASSIGN expression ;
    (20) assignment -> . assign_id SUB_ASSIGN expression ;
    (67) conditional_statement -> . IF ( expression ) instruction
    (68) conditional_statement -> . IF ( expression ) instruction ELSE instruction
    (73) print_statement -> . PRINT expression_list ;
    (69) jump_statement -> . BREAK ;
    (70) jump_statement -> . CONTINUE ;
    (71) return_statement -> . RETURN ;
    (72) return_statement -> . RETURN expression ;
    (76) while_loop -> . WHILE ( expression ) instruction
    (77) for_loop -> . FOR ID = range instruction
    (15) instruction_block -> . { instructions }
    (21) assign_id -> . ID
    (22) assign_id -> . slice
    (23) slice -> . ID slice_vector

    $end            reduce using rule 3 (instructions_opt -> instructions .)
    IF              shift and go to state 15
    PRINT           shift and go to state 16
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    WHILE           shift and go to state 20
    FOR             shift and go to state 21
    {               shift and go to state 23
    ID              shift and go to state 22

    instruction                    shift and go to state 25
    assignment                     shift and go to state 6
    conditional_statement          shift and go to state 7
    print_statement                shift and go to state 8
    jump_statement                 shift and go to state 9
    return_statement               shift and go to state 10
    while_loop                     shift and go to state 11
    for_loop                       shift and go to state 12
    instruction_block              shift and go to state 13
    assign_id                      shift and go to state 14
    slice                          shift and go to state 24

state 4

    (4) instructions_opt -> empty .

    $end            reduce using rule 4 (instructions_opt -> empty .)


state 5

    (6) instructions -> instruction .

    IF              reduce using rule 6 (instructions -> instruction .)
    PRINT           reduce using rule 6 (instructions -> instruction .)
    BREAK           reduce using rule 6 (instructions -> instruction .)
    CONTINUE        reduce using rule 6 (instructions -> instruction .)
    RETURN          reduce using rule 6 (instructions -> instruction .)
    WHILE           reduce using rule 6 (instructions -> instruction .)
    FOR             reduce using rule 6 (instructions -> instruction .)
    {               reduce using rule 6 (instructions -> instruction .)
    ID              reduce using rule 6 (instructions -> instruction .)
    $end            reduce using rule 6 (instructions -> instruction .)
    }               reduce using rule 6 (instructions -> instruction .)


state 6

    (7) instruction -> assignment .

    IF              reduce using rule 7 (instruction -> assignment .)
    PRINT           reduce using rule 7 (instruction -> assignment .)
    BREAK           reduce using rule 7 (instruction -> assignment .)
    CONTINUE        reduce using rule 7 (instruction -> assignment .)
    RETURN          reduce using rule 7 (instruction -> assignment .)
    WHILE           reduce using rule 7 (instruction -> assignment .)
    FOR             reduce using rule 7 (instruction -> assignment .)
    {               reduce using rule 7 (instruction -> assignment .)
    ID              reduce using rule 7 (instruction -> assignment .)
    $end            reduce using rule 7 (instruction -> assignment .)
    }               reduce using rule 7 (instruction -> assignment .)
    ELSE            reduce using rule 7 (instruction -> assignment .)


state 7

    (8) instruction -> conditional_statement .

    IF              reduce using rule 8 (instruction -> conditional_statement .)
    PRINT           reduce using rule 8 (instruction -> conditional_statement .)
    BREAK           reduce using rule 8 (instruction -> conditional_statement .)
    CONTINUE        reduce using rule 8 (instruction -> conditional_statement .)
    RETURN          reduce using rule 8 (instruction -> conditional_statement .)
    WHILE           reduce using rule 8 (instruction -> conditional_statement .)
    FOR             reduce using rule 8 (instruction -> conditional_statement .)
    {               reduce using rule 8 (instruction -> conditional_statement .)
    ID              reduce using rule 8 (instruction -> conditional_statement .)
    $end            reduce using rule 8 (instruction -> conditional_statement .)
    }               reduce using rule 8 (instruction -> conditional_statement .)
    ELSE            reduce using rule 8 (instruction -> conditional_statement .)


state 8

    (9) instruction -> print_statement .

    IF              reduce using rule 9 (instruction -> print_statement .)
    PRINT           reduce using rule 9 (instruction -> print_statement .)
    BREAK           reduce using rule 9 (instruction -> print_statement .)
    CONTINUE        reduce using rule 9 (instruction -> print_statement .)
    RETURN          reduce using rule 9 (instruction -> print_statement .)
    WHILE           reduce using rule 9 (instruction -> print_statement .)
    FOR             reduce using rule 9 (instruction -> print_statement .)
    {               reduce using rule 9 (instruction -> print_statement .)
    ID              reduce using rule 9 (instruction -> print_statement .)
    $end            reduce using rule 9 (instruction -> print_statement .)
    }               reduce using rule 9 (instruction -> print_statement .)
    ELSE            reduce using rule 9 (instruction -> print_statement .)


state 9

    (10) instruction -> jump_statement .

    IF              reduce using rule 10 (instruction -> jump_statement .)
    PRINT           reduce using rule 10 (instruction -> jump_statement .)
    BREAK           reduce using rule 10 (instruction -> jump_statement .)
    CONTINUE        reduce using rule 10 (instruction -> jump_statement .)
    RETURN          reduce using rule 10 (instruction -> jump_statement .)
    WHILE           reduce using rule 10 (instruction -> jump_statement .)
    FOR             reduce using rule 10 (instruction -> jump_statement .)
    {               reduce using rule 10 (instruction -> jump_statement .)
    ID              reduce using rule 10 (instruction -> jump_statement .)
    $end            reduce using rule 10 (instruction -> jump_statement .)
    }               reduce using rule 10 (instruction -> jump_statement .)
    ELSE            reduce using rule 10 (instruction -> jump_statement .)


state 10

    (11) instruction -> return_statement .

    IF              reduce using rule 11 (instruction -> return_statement .)
    PRINT           reduce using rule 11 (instruction -> return_statement .)
    BREAK           reduce using rule 11 (instruction -> return_statement .)
    CONTINUE        reduce using rule 11 (instruction -> return_statement .)
    RETURN          reduce using rule 11 (instruction -> return_statement .)
    WHILE           reduce using rule 11 (instruction -> return_statement .)
    FOR             reduce using rule 11 (instruction -> return_statement .)
    {               reduce using rule 11 (instruction -> return_statement .)
    ID              reduce using rule 11 (instruction -> return_statement .)
    $end            reduce using rule 11 (instruction -> return_statement .)
    }               reduce using rule 11 (instruction -> return_statement .)
    ELSE            reduce using rule 11 (instruction -> return_statement .)


state 11

    (12) instruction -> while_loop .

    IF              reduce using rule 12 (instruction -> while_loop .)
    PRINT           reduce using rule 12 (instruction -> while_loop .)
    BREAK           reduce using rule 12 (instruction -> while_loop .)
    CONTINUE        reduce using rule 12 (instruction -> while_loop .)
    RETURN          reduce using rule 12 (instruction -> while_loop .)
    WHILE           reduce using rule 12 (instruction -> while_loop .)
    FOR             reduce using rule 12 (instruction -> while_loop .)
    {               reduce using rule 12 (instruction -> while_loop .)
    ID              reduce using rule 12 (instruction -> while_loop .)
    $end            reduce using rule 12 (instruction -> while_loop .)
    }               reduce using rule 12 (instruction -> while_loop .)
    ELSE            reduce using rule 12 (instruction -> while_loop .)


state 12

    (13) instruction -> for_loop .

    IF              reduce using rule 13 (instruction -> for_loop .)
    PRINT           reduce using rule 13 (instruction -> for_loop .)
    BREAK           reduce using rule 13 (instruction -> for_loop .)
    CONTINUE        reduce using rule 13 (instruction -> for_loop .)
    RETURN          reduce using rule 13 (instruction -> for_loop .)
    WHILE           reduce using rule 13 (instruction -> for_loop .)
    FOR             reduce using rule 13 (instruction -> for_loop .)
    {               reduce using rule 13 (instruction -> for_loop .)
    ID              reduce using rule 13 (instruction -> for_loop .)
    $end            reduce using rule 13 (instruction -> for_loop .)
    }               reduce using rule 13 (instruction -> for_loop .)
    ELSE            reduce using rule 13 (instruction -> for_loop .)


state 13

    (14) instruction -> instruction_block .

    IF              reduce using rule 14 (instruction -> instruction_block .)
    PRINT           reduce using rule 14 (instruction -> instruction_block .)
    BREAK           reduce using rule 14 (instruction -> instruction_block .)
    CONTINUE        reduce using rule 14 (instruction -> instruction_block .)
    RETURN          reduce using rule 14 (instruction -> instruction_block .)
    WHILE           reduce using rule 14 (instruction -> instruction_block .)
    FOR             reduce using rule 14 (instruction -> instruction_block .)
    {               reduce using rule 14 (instruction -> instruction_block .)
    ID              reduce using rule 14 (instruction -> instruction_block .)
    $end            reduce using rule 14 (instruction -> instruction_block .)
    }               reduce using rule 14 (instruction -> instruction_block .)
    ELSE            reduce using rule 14 (instruction -> instruction_block .)


state 14

    (16) assignment -> assign_id . = expression ;
    (17) assignment -> assign_id . MUL_ASSIGN expression ;
    (18) assignment -> assign_id . DIV_ASSIGN expression ;
    (19) assignment -> assign_id . PLUS_ASSIGN expression ;
    (20) assignment -> assign_id . SUB_ASSIGN expression ;

    =               shift and go to state 26
    MUL_ASSIGN      shift and go to state 27
    DIV_ASSIGN      shift and go to state 28
    PLUS_ASSIGN     shift and go to state 29
    SUB_ASSIGN      shift and go to state 30


state 15

    (67) conditional_statement -> IF . ( expression ) instruction
    (68) conditional_statement -> IF . ( expression ) instruction ELSE instruction

    (               shift and go to state 31


state 16

    (73) print_statement -> PRINT . expression_list ;
    (74) expression_list -> . expression_list , expression
    (75) expression_list -> . expression
    (27) expression -> . expression_binop
    (28) expression -> . expression_relop
    (29) expression -> . expression_unary
    (30) expression -> . matrix_funcs
    (31) expression -> . constant
    (32) expression -> . matrix
    (33) expression -> . vector
    (34) expression -> . slice
    (35) expression -> . ID
    (36) expression -> . ( expression )
    (37) expression_binop -> . expression + expression
    (38) expression_binop -> . expression - expression
    (39) expression_binop -> . expression * expression
    (40) expression_binop -> . expression / expression
    (41) expression_binop -> . expression MATRIX_PLUS expression
    (42) expression_binop -> . expression MATRIX_SUB expression
    (43) expression_binop -> . expression MATRIX_MUL expression
    (44) expression_binop -> . expression MATRIX_DIV expression
    (45) expression_relop -> . expression RELOP_EQ expression
    (46) expression_relop -> . expression RELOP_GT expression
    (47) expression_relop -> . expression RELOP_LT expression
    (48) expression_relop -> . expression RELOP_GE expression
    (49) expression_relop -> . expression RELOP_LE expression
    (50) expression_relop -> . expression RELOP_NE expression
    (51) expression_unary -> . - expression
    (52) expression_unary -> . expression '
    (53) matrix_funcs -> . ZEROS ( expression_list )
    (54) matrix_funcs -> . ONES ( expression_list )
    (55) matrix_funcs -> . EYE ( expression_list )
    (56) constant -> . number
    (57) constant -> . DT_STRING
    (58) matrix -> . [ vectors ]
    (61) vector -> . [ numbers ]
    (62) vector -> . [ ]
    (23) slice -> . ID slice_vector
    (65) number -> . DT_INTEGER
    (66) number -> . DT_FLOAT

    ID              shift and go to state 42
    (               shift and go to state 43
    -               shift and go to state 44
    ZEROS           shift and go to state 45
    ONES            shift and go to state 46
    EYE             shift and go to state 47
    DT_STRING       shift and go to state 49
    [               shift and go to state 50
    DT_INTEGER      shift and go to state 51
    DT_FLOAT        shift and go to state 52

    expression_list                shift and go to state 32
    expression                     shift and go to state 33
    expression_binop               shift and go to state 34
    expression_relop               shift and go to state 35
    expression_unary               shift and go to state 36
    matrix_funcs                   shift and go to state 37
    constant                       shift and go to state 38
    matrix                         shift and go to state 39
    vector                         shift and go to state 40
    slice                          shift and go to state 41
    number                         shift and go to state 48

state 17

    (69) jump_statement -> BREAK . ;

    ;               shift and go to state 53


state 18

    (70) jump_statement -> CONTINUE . ;

    ;               shift and go to state 54


state 19

    (71) return_statement -> RETURN . ;
    (72) return_statement -> RETURN . expression ;
    (27) expression -> . expression_binop
    (28) expression -> . expression_relop
    (29) expression -> . expression_unary
    (30) expression -> . matrix_funcs
    (31) expression -> . constant
    (32) expression -> . matrix
    (33) expression -> . vector
    (34) expression -> . slice
    (35) expression -> . ID
    (36) expression -> . ( expression )
    (37) expression_binop -> . expression + expression
    (38) expression_binop -> . expression - expression
    (39) expression_binop -> . expression * expression
    (40) expression_binop -> . expression / expression
    (41) expression_binop -> . expression MATRIX_PLUS expression
    (42) expression_binop -> . expression MATRIX_SUB expression
    (43) expression_binop -> . expression MATRIX_MUL expression
    (44) expression_binop -> . expression MATRIX_DIV expression
    (45) expression_relop -> . expression RELOP_EQ expression
    (46) expression_relop -> . expression RELOP_GT expression
    (47) expression_relop -> . expression RELOP_LT expression
    (48) expression_relop -> . expression RELOP_GE expression
    (49) expression_relop -> . expression RELOP_LE expression
    (50) expression_relop -> . expression RELOP_NE expression
    (51) expression_unary -> . - expression
    (52) expression_unary -> . expression '
    (53) matrix_funcs -> . ZEROS ( expression_list )
    (54) matrix_funcs -> . ONES ( expression_list )
    (55) matrix_funcs -> . EYE ( expression_list )
    (56) constant -> . number
    (57) constant -> . DT_STRING
    (58) matrix -> . [ vectors ]
    (61) vector -> . [ numbers ]
    (62) vector -> . [ ]
    (23) slice -> . ID slice_vector
    (65) number -> . DT_INTEGER
    (66) number -> . DT_FLOAT

    ;               shift and go to state 55
    ID              shift and go to state 42
    (               shift and go to state 43
    -               shift and go to state 44
    ZEROS           shift and go to state 45
    ONES            shift and go to state 46
    EYE             shift and go to state 47
    DT_STRING       shift and go to state 49
    [               shift and go to state 50
    DT_INTEGER      shift and go to state 51
    DT_FLOAT        shift and go to state 52

    expression                     shift and go to state 56
    expression_binop               shift and go to state 34
    expression_relop               shift and go to state 35
    expression_unary               shift and go to state 36
    matrix_funcs                   shift and go to state 37
    constant                       shift and go to state 38
    matrix                         shift and go to state 39
    vector                         shift and go to state 40
    slice                          shift and go to state 41
    number                         shift and go to state 48

state 20

    (76) while_loop -> WHILE . ( expression ) instruction

    (               shift and go to state 57


state 21

    (77) for_loop -> FOR . ID = range instruction

    ID              shift and go to state 58


state 22

    (21) assign_id -> ID .
    (23) slice -> ID . slice_vector
    (24) slice_vector -> . [ expression_list ]
    (25) slice_vector -> . [ range ]
    (26) slice_vector -> . [ range , range ]

    =               reduce using rule 21 (assign_id -> ID .)
    MUL_ASSIGN      reduce using rule 21 (assign_id -> ID .)
    DIV_ASSIGN      reduce using rule 21 (assign_id -> ID .)
    PLUS_ASSIGN     reduce using rule 21 (assign_id -> ID .)
    SUB_ASSIGN      reduce using rule 21 (assign_id -> ID .)
    [               shift and go to state 60

    slice_vector                   shift and go to state 59

state 23

    (15) instruction_block -> { . instructions }
    (5) instructions -> . instructions instruction
    (6) instructions -> . instruction
    (7) instruction -> . assignment
    (8) instruction -> . conditional_statement
    (9) instruction -> . print_statement
    (10) instruction -> . jump_statement
    (11) instruction -> . return_statement
    (12) instruction -> . while_loop
    (13) instruction -> . for_loop
    (14) instruction -> . instruction_block
    (16) assignment -> . assign_id = expression ;
    (17) assignment -> . assign_id MUL_ASSIGN expression ;
    (18) assignment -> . assign_id DIV_ASSIGN expression ;
    (19) assignment -> . assign_id PLUS_ASSIGN expression ;
    (20) assignment -> . assign_id SUB_ASSIGN expression ;
    (67) conditional_statement -> . IF ( expression ) instruction
    (68) conditional_statement -> . IF ( expression ) instruction ELSE instruction
    (73) print_statement -> . PRINT expression_list ;
    (69) jump_statement -> . BREAK ;
    (70) jump_statement -> . CONTINUE ;
    (71) return_statement -> . RETURN ;
    (72) return_statement -> . RETURN expression ;
    (76) while_loop -> . WHILE ( expression ) instruction
    (77) for_loop -> . FOR ID = range instruction
    (15) instruction_block -> . { instructions }
    (21) assign_id -> . ID
    (22) assign_id -> . slice
    (23) slice -> . ID slice_vector

    IF              shift and go to state 15
    PRINT           shift and go to state 16
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    WHILE           shift and go to state 20
    FOR             shift and go to state 21
    {               shift and go to state 23
    ID              shift and go to state 22

    instructions                   shift and go to state 61
    instruction                    shift and go to state 5
    assignment                     shift and go to state 6
    conditional_statement          shift and go to state 7
    print_statement                shift and go to state 8
    jump_statement                 shift and go to state 9
    return_statement               shift and go to state 10
    while_loop                     shift and go to state 11
    for_loop                       shift and go to state 12
    instruction_block              shift and go to state 13
    assign_id                      shift and go to state 14
    slice                          shift and go to state 24

state 24

    (22) assign_id -> slice .

    =               reduce using rule 22 (assign_id -> slice .)
    MUL_ASSIGN      reduce using rule 22 (assign_id -> slice .)
    DIV_ASSIGN      reduce using rule 22 (assign_id -> slice .)
    PLUS_ASSIGN     reduce using rule 22 (assign_id -> slice .)
    SUB_ASSIGN      reduce using rule 22 (assign_id -> slice .)


state 25

    (5) instructions -> instructions instruction .

    IF              reduce using rule 5 (instructions -> instructions instruction .)
    PRINT           reduce using rule 5 (instructions -> instructions instruction .)
    BREAK           reduce using rule 5 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instructions instruction .)
    RETURN          reduce using rule 5 (instructions -> instructions instruction .)
    WHILE           reduce using rule 5 (instructions -> instructions instruction .)
    FOR             reduce using rule 5 (instructions -> instructions instruction .)
    {               reduce using rule 5 (instructions -> instructions instruction .)
    ID              reduce using rule 5 (instructions -> instructions instruction .)
    $end            reduce using rule 5 (instructions -> instructions instruction .)
    }               reduce using rule 5 (instructions -> instructions instruction .)


state 26

    (16) assignment -> assign_id = . expression ;
    (27) expression -> . expression_binop
    (28) expression -> . expression_relop
    (29) expression -> . expression_unary
    (30) expression -> . matrix_funcs
    (31) expression -> . constant
    (32) expression -> . matrix
    (33) expression -> . vector
    (34) expression -> . slice
    (35) expression -> . ID
    (36) expression -> . ( expression )
    (37) expression_binop -> . expression + expression
    (38) expression_binop -> . expression - expression
    (39) expression_binop -> . expression * expression
    (40) expression_binop -> . expression / expression
    (41) expression_binop -> . expression MATRIX_PLUS expression
    (42) expression_binop -> . expression MATRIX_SUB expression
    (43) expression_binop -> . expression MATRIX_MUL expression
    (44) expression_binop -> . expression MATRIX_DIV expression
    (45) expression_relop -> . expression RELOP_EQ expression
    (46) expression_relop -> . expression RELOP_GT expression
    (47) expression_relop -> . expression RELOP_LT expression
    (48) expression_relop -> . expression RELOP_GE expression
    (49) expression_relop -> . expression RELOP_LE expression
    (50) expression_relop -> . expression RELOP_NE expression
    (51) expression_unary -> . - expression
    (52) expression_unary -> . expression '
    (53) matrix_funcs -> . ZEROS ( expression_list )
    (54) matrix_funcs -> . ONES ( expression_list )
    (55) matrix_funcs -> . EYE ( expression_list )
    (56) constant -> . number
    (57) constant -> . DT_STRING
    (58) matrix -> . [ vectors ]
    (61) vector -> . [ numbers ]
    (62) vector -> . [ ]
    (23) slice -> . ID slice_vector
    (65) number -> . DT_INTEGER
    (66) number -> . DT_FLOAT

    ID              shift and go to state 42
    (               shift and go to state 43
    -               shift and go to state 44
    ZEROS           shift and go to state 45
    ONES            shift and go to state 46
    EYE             shift and go to state 47
    DT_STRING       shift and go to state 49
    [               shift and go to state 50
    DT_INTEGER      shift and go to state 51
    DT_FLOAT        shift and go to state 52

    expression                     shift and go to state 62
    expression_binop               shift and go to state 34
    expression_relop               shift and go to state 35
    expression_unary               shift and go to state 36
    matrix_funcs                   shift and go to state 37
    constant                       shift and go to state 38
    matrix                         shift and go to state 39
    vector                         shift and go to state 40
    slice                          shift and go to state 41
    number                         shift and go to state 48

state 27

    (17) assignment -> assign_id MUL_ASSIGN . expression ;
    (27) expression -> . expression_binop
    (28) expression -> . expression_relop
    (29) expression -> . expression_unary
    (30) expression -> . matrix_funcs
    (31) expression -> . constant
    (32) expression -> . matrix
    (33) expression -> . vector
    (34) expression -> . slice
    (35) expression -> . ID
    (36) expression -> . ( expression )
    (37) expression_binop -> . expression + expression
    (38) expression_binop -> . expression - expression
    (39) expression_binop -> . expression * expression
    (40) expression_binop -> . expression / expression
    (41) expression_binop -> . expression MATRIX_PLUS expression
    (42) expression_binop -> . expression MATRIX_SUB expression
    (43) expression_binop -> . expression MATRIX_MUL expression
    (44) expression_binop -> . expression MATRIX_DIV expression
    (45) expression_relop -> . expression RELOP_EQ expression
    (46) expression_relop -> . expression RELOP_GT expression
    (47) expression_relop -> . expression RELOP_LT expression
    (48) expression_relop -> . expression RELOP_GE expression
    (49) expression_relop -> . expression RELOP_LE expression
    (50) expression_relop -> . expression RELOP_NE expression
    (51) expression_unary -> . - expression
    (52) expression_unary -> . expression '
    (53) matrix_funcs -> . ZEROS ( expression_list )
    (54) matrix_funcs -> . ONES ( expression_list )
    (55) matrix_funcs -> . EYE ( expression_list )
    (56) constant -> . number
    (57) constant -> . DT_STRING
    (58) matrix -> . [ vectors ]
    (61) vector -> . [ numbers ]
    (62) vector -> . [ ]
    (23) slice -> . ID slice_vector
    (65) number -> . DT_INTEGER
    (66) number -> . DT_FLOAT

    ID              shift and go to state 42
    (               shift and go to state 43
    -               shift and go to state 44
    ZEROS           shift and go to state 45
    ONES            shift and go to state 46
    EYE             shift and go to state 47
    DT_STRING       shift and go to state 49
    [               shift and go to state 50
    DT_INTEGER      shift and go to state 51
    DT_FLOAT        shift and go to state 52

    expression                     shift and go to state 63
    expression_binop               shift and go to state 34
    expression_relop               shift and go to state 35
    expression_unary               shift and go to state 36
    matrix_funcs                   shift and go to state 37
    constant                       shift and go to state 38
    matrix                         shift and go to state 39
    vector                         shift and go to state 40
    slice                          shift and go to state 41
    number                         shift and go to state 48

state 28

    (18) assignment -> assign_id DIV_ASSIGN . expression ;
    (27) expression -> . expression_binop
    (28) expression -> . expression_relop
    (29) expression -> . expression_unary
    (30) expression -> . matrix_funcs
    (31) expression -> . constant
    (32) expression -> . matrix
    (33) expression -> . vector
    (34) expression -> . slice
    (35) expression -> . ID
    (36) expression -> . ( expression )
    (37) expression_binop -> . expression + expression
    (38) expression_binop -> . expression - expression
    (39) expression_binop -> . expression * expression
    (40) expression_binop -> . expression / expression
    (41) expression_binop -> . expression MATRIX_PLUS expression
    (42) expression_binop -> . expression MATRIX_SUB expression
    (43) expression_binop -> . expression MATRIX_MUL expression
    (44) expression_binop -> . expression MATRIX_DIV expression
    (45) expression_relop -> . expression RELOP_EQ expression
    (46) expression_relop -> . expression RELOP_GT expression
    (47) expression_relop -> . expression RELOP_LT expression
    (48) expression_relop -> . expression RELOP_GE expression
    (49) expression_relop -> . expression RELOP_LE expression
    (50) expression_relop -> . expression RELOP_NE expression
    (51) expression_unary -> . - expression
    (52) expression_unary -> . expression '
    (53) matrix_funcs -> . ZEROS ( expression_list )
    (54) matrix_funcs -> . ONES ( expression_list )
    (55) matrix_funcs -> . EYE ( expression_list )
    (56) constant -> . number
    (57) constant -> . DT_STRING
    (58) matrix -> . [ vectors ]
    (61) vector -> . [ numbers ]
    (62) vector -> . [ ]
    (23) slice -> . ID slice_vector
    (65) number -> . DT_INTEGER
    (66) number -> . DT_FLOAT
